[package]
name = "opensokoban"
version = "0.1.0"
edition = "2024"

[dependencies.image]
version = "0.x"
default-features = false
features = ["png"]

[dependencies.macroquad]
version = "0.4.15"
default-features = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
