[package]
name = "opensokoban"
version = "0.1.1"
edition = "2024"

[dependencies]
egui-macroquad = "0.17.3"
egui = "0.31.1"
open = "5.3.0"

[dependencies.image]
version = "0.x"
default-features = false
features = ["png"]

[dependencies.macroquad]
version = "0.4.15"
default-features = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
